<resources>
    <string name="app_name">Borala</string>
    <string name="log_in">Log_in</string>
    <string name="email">E-mail Addres</string>
    <string name="pass">Password</string>
    <string name="or">OR</string>
    <string name="facebook">Login With Facebook</string>
    <string name="twitter">Login With Twitter</string>
    <string name="need">NEED AN ACCOUNT</string>
    <string name="sign">Sign Up Now</string>
    <string name="etec">etecia@etecia.com.br</string>
</resources>