<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textSize="30dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableRight="@drawable/ic_baseline_mail"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:drawableRight="@drawable/ic_baseline_lock"
            android:inputType="textPassword"
            android:maxLength="30"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="200dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:backgroundTint="#3B5998"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:backgroundTint="#08A0E9"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:backgroundTint="#DB4A39"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etec"
            android:layout_marginTop="64dp"
            android:layout_gravity="end"/>


    </LinearLayout>

</ScrollView>